# opencv_template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
